--- a/py2048.ipynb
+++ b/py2048.ipynb
@@ -2,24 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2 8 2]\n",
-      " [2 4 2]\n",
-      " [2 4 2]]\n",
+      "[[2]]\n",
       "\n",
       "You won !\n",
       "\n",
       "\n",
       "Game stats:\n",
-      "Number of valid moves made for current board :  11\n",
-      "Number of total moves played throughout the session :  11\n",
-      "Time spent throughout the session :  0  minute(s) and  42  second(s)\n"
+      "Number of valid moves made for current board :  0\n",
+      "Number of total moves played throughout the session :  0\n",
+      "Time spent on current board :  0  minute(s) and  11  second(s)\n"
      ]
     }
    ],
@@ -164,6 +162,7 @@
     "                        \n",
     "def play_game():\n",
     "    t1 = time.perf_counter()\n",
+    "    \n",
     "    try:\n",
     "        print(\"Enter board size:\\n\")\n",
     "        n = int(input())\n",
@@ -201,6 +200,7 @@
     "        if restart_check == 1:\n",
     "            print(\"\\nYou have cleared the board\\n\")\n",
     "            board = create_board(n)\n",
+    "            t1 = time.perf_counter()\n",
     "            moves_count = 0\n",
     "            restart_check = 0\n",
     "        print(board)\n",
@@ -217,6 +217,7 @@
     "        if moves_count == 0 and player_choice != 'Z' and attempts == 0:\n",
     "            print(\"\\nYou have the following choices throughout the game:\")\n",
     "            print(\"\\n1. Enter move\\n2. Press n to stop\\n3. Press r to clear board\\n\")\n",
+    "            t1 = time.perf_counter()\n",
     "        player_choice = input()\n",
     "        if player_choice in valid_moves:\n",
     "            attempts = attempts + 1\n",
@@ -238,19 +239,19 @@
     "            attempts = attempts + 1\n",
     "        else:\n",
     "            invalid_check = 1\n",
+    "\n",
     "    t2 = time.perf_counter()\n",
     "    print(\"\\nGame stats:\")\n",
     "    print(\"Number of valid moves made for current board : \", moves_count)\n",
     "    print(\"Number of total moves played throughout the session : \", attempts)\n",
+    "    \n",
     "    seconds_spent = t2-t1\n",
     "    minutes_spent = 0\n",
     "    if seconds_spent > 60:\n",
     "        minutes_spent = int(seconds_spent / 60)\n",
     "        seconds_spent = int(math.remainder(seconds_spent, 60))\n",
-    "        print (\"Time spent throughout the session : \", minutes_spent, \" minute(s) and \", seconds_spent, \" second(s)\")\n",
-    "    else:\n",
-    "        print (\"Time spent throughout the session : \", minutes_spent, \" minute(s) and \", round(seconds_spent), \" second(s)\")\n",
-    "\n",
+    "    print (\"Time spent on current board : \", minutes_spent, \" minute(s) and \", round(seconds_spent), \" second(s)\")\n",
+    "        \n",
     "play_game()"
    ]
   }
