Added some comments to the code, updated some variable names and power of two function

--- a/py2048.ipynb
+++ b/py2048.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2]]\n",
+      "[[0 0]\n",
+      " [0 2]]\n",
       "\n",
       "You won !\n",
       "\n",
@@ -17,7 +18,7 @@
       "Game stats:\n",
       "Number of valid moves made for current board :  0\n",
       "Number of total moves played throughout the session :  0\n",
-      "Time spent on current board :  0  minute(s) and  11  second(s)\n"
+      "Time spent on current board :  0  minute(s) and  0  second(s)\n"
      ]
     }
    ],
@@ -28,11 +29,15 @@
     "import time\n",
     "import math\n",
     "\n",
+    "# Function to create board of specified size and spawn once at the time of initiliasation\n",
+    "\n",
     "def create_board(n=5):\n",
     "    \n",
     "    board = np.zeros([n, n], dtype=int)\n",
     "    board = random_spawn(board, n)\n",
     "    return board\n",
+    "\n",
+    "# Function to spawn at a random location on the board at random between 2 or 4 depending on board size\n",
     "\n",
     "def random_spawn(board, n=5):\n",
     "    \n",
@@ -44,6 +49,18 @@
     "    if board[selection] == 0:\n",
     "        board[selection] = random.choice(spawn_choice)\n",
     "    return board\n",
+    "\n",
+    "# Function to check whether win value is a power of two or not\n",
+    "\n",
+    "def check_power_of_2(w=2048):\n",
+    "    check_val = 1\n",
+    "    while check_val <= w:\n",
+    "        if check_val == w:\n",
+    "            return True\n",
+    "        check_val *= 2\n",
+    "    return False\n",
+    "\n",
+    "# Function that moves and adds towards the specified direction by player\n",
     "\n",
     "def move(board, player_choice, n=5, w=2048):\n",
     "    \n",
@@ -137,6 +154,8 @@
     "    send = (board, spawn_check)\n",
     "    return send\n",
     "\n",
+    "# Checks win status or returns 0 if game is not over\n",
+    "\n",
     "def check_win(board, n=5, w=2048):\n",
     "    \n",
     "    adjacent_equals_check = 0\n",
@@ -159,30 +178,37 @@
     "        return -1\n",
     "    \n",
     "    return 0\n",
-    "                        \n",
+    "\n",
+    "# Core function where the game is played out\n",
+    "\n",
     "def play_game():\n",
-    "    t1 = time.perf_counter()\n",
+    "    \n",
+    "    # try and except used for input of board value and win value to avoid program crash in case of unexpected input\n",
     "    \n",
     "    try:\n",
     "        print(\"Enter board size:\\n\")\n",
     "        n = int(input())\n",
-    "        if n<1 or type(n)!=int:\n",
+    "        if n<1 or type(n) != int:\n",
     "            raise ValueError\n",
     "    except ValueError:\n",
     "        print(\"\\nInvalid board size entered\\n\")\n",
     "        n = 5\n",
     "        print(\"Board size has been set to 5\")\n",
     "    try:\n",
-    "        print(\"\\nEnter winning value:\\n\")\n",
+    "        print(\"\\nEnter winning value (should be a power of two):\\n\")\n",
     "        w = int(input())\n",
-    "        if w%2 != 0 or type(w)!=int:\n",
+    "        if w != 0 and check_power_of_2(w) == False or type(w) != int:\n",
     "            raise ValueError\n",
     "    except ValueError:\n",
     "        print(\"\\nInvalid winning value entered\\n\")\n",
     "        w = 2048\n",
     "        print(\"Winning value has been set to 2048\\n\")\n",
-    "    print(\"Enter any key to continue\\n\")\n",
+    "\n",
+    "    print(\"Enter any key to continue to the game\\n\")\n",
     "    continue_choice = input()\n",
+    "    \n",
+    "    # Initializing board and other game variables\n",
+    "\n",
     "    board = create_board(n)\n",
     "    player_choice = 'q'\n",
     "    result = 0\n",
@@ -192,13 +218,20 @@
     "    spawn_check = 0\n",
     "    attempts = 0\n",
     "    valid_moves = ('w', 'a', 's', 'd', 'W', 'A', 'S', 'D')\n",
+    "    t1 = time.perf_counter()\n",
+    "    \n",
+    "    # Main loop where the game is carried out\n",
+    "    \n",
     "    while result == 0:\n",
     "        clear_output()\n",
+    "        \n",
+    "        # Statements to execute according to current game status\n",
+    "        \n",
     "        if invalid_check == 1:\n",
     "            print(\"\\nInvalid move, enter move again\\n\")\n",
     "            invalid_check = 0\n",
     "        if restart_check == 1:\n",
-    "            print(\"\\nYou have cleared the board\\n\")\n",
+    "            print(\"\\nYou have cleared the board\\nEnter next move\\n\")\n",
     "            board = create_board(n)\n",
     "            t1 = time.perf_counter()\n",
     "            moves_count = 0\n",
@@ -210,15 +243,18 @@
     "        selections = list(zip(*np.where(board==0)))\n",
     "        if not selections:\n",
     "            print(\"\\nNo more spaces left\\n\")\n",
-    "        if (attempts > 0 and moves_count != 0 and spawn_check == 1) and (player_choice == 'Z' or restart_check == 0):\n",
+    "        if attempts != 0 and moves_count != 0 and spawn_check == 1 and restart_check == 0:\n",
     "            print(\"\\nEnter next move\\n\")\n",
-    "        if attempts != 0 and spawn_check == 0 and player_choice != 'r':\n",
+    "        if attempts != 0 and spawn_check == 0 and (player_choice != 'r' and player_choice != 'R'):\n",
     "            print(\"\\nBoard unchanged, enter some other move\\n\")\n",
     "        if moves_count == 0 and player_choice != 'Z' and attempts == 0:\n",
     "            print(\"\\nYou have the following choices throughout the game:\")\n",
-    "            print(\"\\n1. Enter move\\n2. Press n to stop\\n3. Press r to clear board\\n\")\n",
+    "            print(\"\\n1. Enter move\\n2. Press x to stop\\n3. Press r to clear board\\n\")\n",
     "            t1 = time.perf_counter()\n",
     "        player_choice = input()\n",
+    "        \n",
+    "        # Main part where based on input, moves and choices are carried out\n",
+    "        \n",
     "        if player_choice in valid_moves:\n",
     "            attempts = attempts + 1\n",
     "            received = move(board, player_choice, n, w)\n",
@@ -226,7 +262,7 @@
     "            if spawn_check == 1:\n",
     "                board = random_spawn(board, n)\n",
     "                moves_count = moves_count + 1\n",
-    "        elif player_choice == 'n' or player_choice == 'N':\n",
+    "        elif player_choice == 'x' or player_choice == 'X':\n",
     "            print(\"\\nYou have stopped the game\\n\")\n",
     "            break\n",
     "        elif player_choice == 'r' or player_choice == 'R':\n",
@@ -241,19 +277,26 @@
     "            invalid_check = 1\n",
     "\n",
     "    t2 = time.perf_counter()\n",
+    "\n",
     "    print(\"\\nGame stats:\")\n",
     "    print(\"Number of valid moves made for current board : \", moves_count)\n",
     "    print(\"Number of total moves played throughout the session : \", attempts)\n",
-    "    \n",
     "    seconds_spent = t2-t1\n",
     "    minutes_spent = 0\n",
     "    if seconds_spent > 60:\n",
     "        minutes_spent = int(seconds_spent / 60)\n",
     "        seconds_spent = int(math.remainder(seconds_spent, 60))\n",
     "    print (\"Time spent on current board : \", minutes_spent, \" minute(s) and \", round(seconds_spent), \" second(s)\")\n",
-    "        \n",
+    "\n",
     "play_game()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
