--- a/py2048.ipynb
+++ b/py2048.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0]\n",
-      " [0 2]]\n",
+      "[[2 0]\n",
+      " [4 2]]\n",
       "\n",
       "You won !\n",
       "\n",
       "\n",
       "Game stats:\n",
-      "Number of valid moves made for current board :  0\n",
-      "Number of total moves played throughout the session :  0\n",
-      "Time spent on current board :  0  minute(s) and  0  second(s)\n"
+      "Number of valid moves made for current board :  3\n",
+      "Number of presses throughout the current session :  3\n",
+      "Time spent on current board :  0  minute(s) and  4  second(s)\n"
      ]
     }
    ],
@@ -27,7 +29,8 @@
     "import numpy as np\n",
     "from IPython.display import clear_output\n",
     "import time\n",
-    "import math\n",
+    "\n",
+    "\n",
     "\n",
     "# Function to create board of specified size and spawn once at the time of initiliasation\n",
     "\n",
@@ -36,6 +39,8 @@
     "    board = np.zeros([n, n], dtype=int)\n",
     "    board = random_spawn(board, n)\n",
     "    return board\n",
+    "\n",
+    "\n",
     "\n",
     "# Function to spawn at a random location on the board at random between 2 or 4 depending on board size\n",
     "\n",
@@ -67,12 +72,12 @@
     "    skip_check = 0\n",
     "    spawn_check = 0\n",
     "    \n",
-    "    if player_choice == 'w' or player_choice == 'W':\n",
+    "    if player_choice=='w' or player_choice=='W':\n",
     "        for second_iteration in range(n):\n",
     "            for first_iteration in range(n):\n",
     "                for j in range(n):\n",
     "                    for i in range(n):\n",
-    "                        if board[i][j] == 0 and i<(n-1) and board[i+1][j] != 0:\n",
+    "                        if board[i][j]==0 and i<(n-1) and board[i+1][j]!=0:\n",
     "                            board[i][j] = board[i+1][j]\n",
     "                            board[i+1][j] = 0\n",
     "                            spawn_check = 1\n",
@@ -82,18 +87,18 @@
     "                        if skip_check == 1:\n",
     "                            skip_check = 0\n",
     "                            continue\n",
-    "                        if board[i][j] != 0 and i<(n-1) and board[i+1][j] == board[i][j]:\n",
-    "                            board[i][j] = board[i+1][j] + board[i][j]\n",
+    "                        if board[i][j]!=0 and i<(n-1) and board[i+1][j]==board[i][j]:\n",
+    "                            board[i][j] += board[i+1][j]\n",
     "                            board[i+1][j] = 0\n",
     "                            skip_check = 1\n",
     "                            spawn_check = 1\n",
     "\n",
-    "    elif player_choice == 'a' or player_choice == 'A':\n",
+    "    elif player_choice=='a' or player_choice=='A':\n",
     "        for second_iteration in range(n):\n",
     "            for first_iteration in range(n):\n",
     "                for i in range(n):\n",
     "                    for j in range(n):\n",
-    "                        if board[i][j] == 0 and j<(n-1) and board[i][j+1] != 0:\n",
+    "                        if board[i][j]==0 and j<(n-1) and board[i][j+1]!=0:\n",
     "                            board[i][j] = board[i][j+1]\n",
     "                            board[i][j+1] = 0\n",
     "                            spawn_check = 1\n",
@@ -103,18 +108,18 @@
     "                        if skip_check == 1:\n",
     "                            skip_check = 0\n",
     "                            continue\n",
-    "                        if board[i][j] != 0 and j<(n-1) and board[i][j+1] == board[i][j]:\n",
-    "                            board[i][j] = board[i][j+1] + board[i][j]\n",
+    "                        if board[i][j]!=0 and j<(n-1) and board[i][j+1]==board[i][j]:\n",
+    "                            board[i][j] += board[i][j+1]\n",
     "                            board[i][j+1] = 0\n",
     "                            skip_check = 1\n",
     "                            spawn_check = 1\n",
     "\n",
-    "    elif player_choice == 's' or player_choice =='S':\n",
+    "    elif player_choice=='s' or player_choice=='S':\n",
     "        for second_iteration in range(n):\n",
     "            for first_iteration in range(n):\n",
     "                for j in range(n):\n",
     "                    for i in reversed(range(n)):\n",
-    "                        if board[i][j] == 0 and i>0 and board[i-1][j] != 0:\n",
+    "                        if board[i][j]==0 and i>0 and board[i-1][j]!=0:\n",
     "                            board[i][j] = board[i-1][j]\n",
     "                            board[i-1][j] = 0\n",
     "                            spawn_check = 1\n",
@@ -124,18 +129,18 @@
     "                        if skip_check == 1:\n",
     "                            skip_check = 0\n",
     "                            continue\n",
-    "                        if board[i][j] != 0 and i>0 and board[i-1][j] == board[i][j]:\n",
-    "                            board[i][j] = board[i-1][j] + board[i][j]\n",
+    "                        if board[i][j]!=0 and i>0 and board[i-1][j]==board[i][j]:\n",
+    "                            board[i][j] += board[i-1][j]\n",
     "                            board[i-1][j] = 0\n",
     "                            skip_check = 1\n",
     "                            spawn_check = 1\n",
     "\n",
-    "    elif player_choice == 'd' or player_choice == 'D':\n",
+    "    elif player_choice=='d' or player_choice=='D':\n",
     "        for second_iteration in range(n):\n",
     "            for first_iteration in range(n):\n",
     "                for i in range(n):\n",
     "                    for j in reversed(range(n)):\n",
-    "                        if board[i][j] == 0 and j>0 and board[i][j-1] != 0:\n",
+    "                        if board[i][j]==0 and j>0 and board[i][j-1]!=0:\n",
     "                            board[i][j] = board[i][j-1]\n",
     "                            board[i][j-1] = 0\n",
     "                            spawn_check = 1\n",
@@ -145,8 +150,8 @@
     "                        if skip_check == 1:\n",
     "                            skip_check = 0\n",
     "                            continue\n",
-    "                        if board[i][j] != 0 and j>0 and board[i][j-1] == board[i][j]:\n",
-    "                            board[i][j] = board[i][j-1] + board[i][j]\n",
+    "                        if board[i][j]!=0 and j>0 and board[i][j-1]==board[i][j]:\n",
+    "                            board[i][j] += board[i][j-1]\n",
     "                            board[i][j-1] = 0\n",
     "                            skip_check = 1\n",
     "                            spawn_check = 1\n",
@@ -154,21 +159,21 @@
     "    send = (board, spawn_check)\n",
     "    return send\n",
     "\n",
-    "# Checks win status or returns 0 if game is not over\n",
+    "# Function to check win status or returns 0 if game is not over\n",
     "\n",
     "def check_win(board, n=5, w=2048):\n",
     "    \n",
     "    adjacent_equals_check = 0\n",
-    "    if any(z == w for z in np.nditer(board)) == True:\n",
+    "    if any(z==w for z in np.nditer(board))==True:\n",
     "        print(\"\\nYou won !\\n\")\n",
     "        return 1\n",
     "    \n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
-    "            if j<(n-1) and board[i][j] == board[i][j+1]:\n",
+    "            if j<(n-1) and board[i][j]==board[i][j+1]:\n",
     "                adjacent_equals_check = 1\n",
     "                return 0\n",
-    "            elif i<(n-1) and board[i][j] == board[i+1][j]:\n",
+    "            elif i<(n-1) and board[i][j]==board[i+1][j]:\n",
     "                adjacent_equals_check = 1\n",
     "                return 0\n",
     "    \n",
@@ -179,6 +184,19 @@
     "    \n",
     "    return 0\n",
     "\n",
+    "# Function to display game statstics\n",
+    "\n",
+    "def game_stats(t1, t2, moves_count, attempts):\n",
+    "    print(\"\\nGame stats:\")\n",
+    "    print(\"Number of valid moves made for current board : \", moves_count)\n",
+    "    print(\"Number of presses throughout the current session : \", attempts)\n",
+    "    seconds_spent = t2-t1\n",
+    "    minutes_spent = 0\n",
+    "    if seconds_spent > 60:\n",
+    "        minutes_spent = int(seconds_spent / 60)\n",
+    "        seconds_spent =  seconds_spent - (minutes_spent*60)\n",
+    "    print (\"Time spent on current board : \", minutes_spent, \" minute(s) and \", round(seconds_spent), \" second(s)\")\n",
+    "\n",
     "# Core function where the game is played out\n",
     "\n",
     "def play_game():\n",
@@ -188,7 +206,7 @@
     "    try:\n",
     "        print(\"Enter board size:\\n\")\n",
     "        n = int(input())\n",
-    "        if n<1 or type(n) != int:\n",
+    "        if n<1 or type(n)!=int:\n",
     "            raise ValueError\n",
     "    except ValueError:\n",
     "        print(\"\\nInvalid board size entered\\n\")\n",
@@ -197,14 +215,14 @@
     "    try:\n",
     "        print(\"\\nEnter winning value (should be a power of two):\\n\")\n",
     "        w = int(input())\n",
-    "        if w != 0 and check_power_of_2(w) == False or type(w) != int:\n",
+    "        if w!=0 and check_power_of_2(w)==False or type(w)!=int:\n",
     "            raise ValueError\n",
     "    except ValueError:\n",
     "        print(\"\\nInvalid winning value entered\\n\")\n",
     "        w = 2048\n",
     "        print(\"Winning value has been set to 2048\\n\")\n",
     "\n",
-    "    print(\"Enter any key to continue to the game\\n\")\n",
+    "    print(\"\\nEnter any key to continue to the game\\n\")\n",
     "    continue_choice = input()\n",
     "    \n",
     "    # Initializing board and other game variables\n",
@@ -217,8 +235,8 @@
     "    restart_check = 0\n",
     "    spawn_check = 0\n",
     "    attempts = 0\n",
+    "    game_restart_check = 0\n",
     "    valid_moves = ('w', 'a', 's', 'd', 'W', 'A', 'S', 'D')\n",
-    "    t1 = time.perf_counter()\n",
     "    \n",
     "    # Main loop where the game is carried out\n",
     "    \n",
@@ -238,65 +256,59 @@
     "            restart_check = 0\n",
     "        print(board)\n",
     "        result = check_win(board, n, w)\n",
-    "        if result != 0:\n",
+    "        if result!=0:\n",
     "            break\n",
     "        selections = list(zip(*np.where(board==0)))\n",
     "        if not selections:\n",
     "            print(\"\\nNo more spaces left\\n\")\n",
-    "        if attempts != 0 and moves_count != 0 and spawn_check == 1 and restart_check == 0:\n",
+    "        if attempts!=0 and moves_count!=0 and spawn_check==1 and restart_check==0:\n",
     "            print(\"\\nEnter next move\\n\")\n",
-    "        if attempts != 0 and spawn_check == 0 and (player_choice != 'r' and player_choice != 'R'):\n",
+    "        if attempts!=0 and spawn_check==0 and (player_choice!='r' and player_choice!='R'):\n",
     "            print(\"\\nBoard unchanged, enter some other move\\n\")\n",
-    "        if moves_count == 0 and player_choice != 'Z' and attempts == 0:\n",
+    "        if moves_count==0 and player_choice!='Z' and attempts==0:\n",
     "            print(\"\\nYou have the following choices throughout the game:\")\n",
-    "            print(\"\\n1. Enter move\\n2. Press x to stop\\n3. Press r to clear board\\n\")\n",
+    "            print(\"\\n1. Enter move\\n2. Enter x to stop the game\\n3. Enter r to clear board\\n4. Enter g to restart entire game\\n\")\n",
     "            t1 = time.perf_counter()\n",
     "        player_choice = input()\n",
     "        \n",
     "        # Main part where based on input, moves and choices are carried out\n",
     "        \n",
     "        if player_choice in valid_moves:\n",
-    "            attempts = attempts + 1\n",
+    "            attempts += 1\n",
     "            received = move(board, player_choice, n, w)\n",
     "            (board, spawn_check) = received\n",
     "            if spawn_check == 1:\n",
     "                board = random_spawn(board, n)\n",
-    "                moves_count = moves_count + 1\n",
-    "        elif player_choice == 'x' or player_choice == 'X':\n",
+    "                moves_count += 1\n",
+    "        elif player_choice=='x' or player_choice=='X':\n",
     "            print(\"\\nYou have stopped the game\\n\")\n",
     "            break\n",
-    "        elif player_choice == 'r' or player_choice == 'R':\n",
+    "        elif player_choice=='r' or player_choice=='R':\n",
     "            restart_check = 1\n",
+    "        elif player_choice=='g' or player_choice=='G':\n",
+    "            print(\"\\nAre you sure you want to restart entire game ?\\nPress y for yes or any other key to continue game\\n\")\n",
+    "            player_choice = input()\n",
+    "            if player_choice=='y' or player_choice=='Y':\n",
+    "                clear_output()\n",
+    "                print(\"\\nYou have restarted the game\\n\")\n",
+    "                play_game()\n",
+    "                game_restart_check = 1\n",
+    "                break\n",
     "        elif player_choice == 'Z':\n",
     "            selections = list(zip(*np.where(board==0)))\n",
     "            for multiple_spawns in range(len(selections)):\n",
     "                board = random_spawn(board, n)\n",
-    "            moves_count = moves_count + 1\n",
-    "            attempts = attempts + 1\n",
+    "            moves_count += + 1\n",
+    "            attempts += 1\n",
     "        else:\n",
     "            invalid_check = 1\n",
     "\n",
     "    t2 = time.perf_counter()\n",
-    "\n",
-    "    print(\"\\nGame stats:\")\n",
-    "    print(\"Number of valid moves made for current board : \", moves_count)\n",
-    "    print(\"Number of total moves played throughout the session : \", attempts)\n",
-    "    seconds_spent = t2-t1\n",
-    "    minutes_spent = 0\n",
-    "    if seconds_spent > 60:\n",
-    "        minutes_spent = int(seconds_spent / 60)\n",
-    "        seconds_spent = int(math.remainder(seconds_spent, 60))\n",
-    "    print (\"Time spent on current board : \", minutes_spent, \" minute(s) and \", round(seconds_spent), \" second(s)\")\n",
+    "    if game_restart_check == 0:\n",
+    "        game_stats(t1, t2, moves_count, attempts)\n",
     "\n",
     "play_game()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
